65) Tune raether buffers size for improve performance.<br>
66) Random subsystem update and speedup.<br>
67) Correctly handle 64-bit values on 32-bit architectures.<br>
68) Fix replace route in ppp on dhcp renew and fiw rewrite dns from dhcp at renew.<br>
69) Add switch mode speed select in WebUI.<br>
70) Add bridge fastpath enable/disable in WebUI.<br>
71) Fix speed regression (non correct align at memalloc in dev.c).<br>
72) Fix ip timestamp issue.<br>
73) Small route speedup.<br>
74) Add send_sigusr_dhcpc sysctl param. Enabled by default. Renew dhcp lease at WAN port status change.<br>
75) More correct vpn restart at WAN dhcp mode.<br>
76) Add ipt_account support. Full work only NatFastpath disabled.<br>
77) Fix add default gateway over static routes.<br>
78) Add Request IP parametr in dhcp client.<br>
79) Add rwfs autoclean at firmware update support.<br>
80) Update dnsmasq to 2.57 version.<br>
81) Fix redial pptp/l2tp at uplink physical disconnect to small time.<br>
82) Speedup route.<br>
83) Some updates in network kernel code.<br>
84) Fix connect to new l2tp brases by Juniper.<br>
85) Correct mac/ip filters in NAT mode.<br>
86) Use extra interrupt in CPU.<br>
87) Rewrite init scripts for lanauth.<br>
88) Add chillispot code in sourcetree and modify webui.<br>
89) Add samba/wins webui.<br>
90) Add dhcp domain oprion support.<br>
91) Update dropbear to 0.53 version.<br>
92) Fix ipt_account webui.<br>
93) Some pppd fixes.<br>
94) Some kernel network/netfilter subsystem fixes.<br>
95) Usb fix some buggy device support.<br>
96) More correct gcc flags for mips arch.<br> 

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>