@@ -6,7 +6,7 @@ start() {
     WatchdogEnabled=`nvram_get 2860 WatchdogEnabled`
     if [ "$WatchdogEnabled" = "1" ]; then
 	$LOG "Start watchdog"
-	nice --19 watchdog -T 180 -t 10 -F /dev/watchdog  > /dev/null 2>&1 &
+	nice --19 watchdog -T 240 -t 20 -F /dev/watchdog  > /dev/null 2>&1 &
     fi
 }
 
